# soteria-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
soteria_sdk/: __init__.py  client.py  decorators.py  exceptions.py
src/soteria_sdk/: __init__.py  client.py  decorators.py  exceptions.py
tests/: __init__.py
